# SDLTemplate

./: .gitmodules  CMakeLists.txt  README.md
include/: Window.hpp
src/: CMakeLists.txt  Window.cpp  main.cpp
